--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 <h1>Welcome to MTU travel</h1>
+<h2>Version 2</h2>
 <p>Bishopstown,<br> Cork <br> Munster</p>
 
+
+<p>This is a travel service on how to get from Cork to Tralee campus</p>
 </body>
+<footer>Niall Hennessy R00122972</footer>
 </html>
