--- a/Home.html
+++ b/Home.html
@@ -6,11 +6,14 @@
 </head>
 <body>
 <h1>Welcome to MTU travel</h1>
-<h2>Version 2</h2>
+<h2>Version 3</h2>
 <p>Bishopstown,<br> Cork <br> Munster</p>
 
 
 <p>This is a travel service on how to get from Cork to Tralee campus</p>
+
+<a href="http://www.mycit.ie/">Visit CIT Main page</a>
+
 </body>
 <footer>Niall Hennessy R00122972</footer>
 </html>
