--- a/Home.html
+++ b/Home.html
@@ -6,13 +6,32 @@
 </head>
 <body>
 <h1>Welcome to MTU travel</h1>
-<h2>Version 3</h2>
+<h2>Version 4</h2>
 <p>Bishopstown,<br> Cork <br> Munster</p>
 
 
 <p>This is a travel service on how to get from Cork to Tralee campus</p>
 
 <a href="http://www.mycit.ie/">Visit CIT Main page</a>
+
+<br>
+<table style="width:100%">
+    <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Age</th>
+    </tr>
+    <tr>
+        <td>Jill</td>
+        <td>Smith</td>
+        <td>50</td>
+    </tr>
+    <tr>
+        <td>Eve</td>
+        <td>Jackson</td>
+        <td>94</td>
+    </tr>
+</table>
 
 </body>
 <footer>Niall Hennessy R00122972</footer>
