--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome to MTU travel</h1>
-<h2>Version 4</h2>
+<h2>Version 5</h2>
 <p>Bishopstown,<br> Cork <br> Munster</p>
 
 
@@ -32,6 +32,12 @@
         <td>94</td>
     </tr>
 </table>
+<br>
+<ul>List of buses
+    <li>Bus 1</li>
+    <li>Bus 2</li>
+    <li>Bus 3 </li>
+</ul>
 
 </body>
 <footer>Niall Hennessy R00122972</footer>
