--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome to MTU travel</h1>
-<h2>Version 5</h2>
+<h2>Version 6</h2>
 <p>Bishopstown,<br> Cork <br> Munster</p>
 
 
@@ -38,6 +38,12 @@
     <li>Bus 2</li>
     <li>Bus 3 </li>
 </ul>
+
+<ol>On Board drink selection
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+</ol>
 
 </body>
 <footer>Niall Hennessy R00122972</footer>
