--- a/Home.html
+++ b/Home.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>MTU Travel</title>
+    <link rel="stylesheet" type="text/css" href="styling.css">
 </head>
 <body>
 <h1>Welcome to MTU travel</h1>
-<h2>Version 6</h2>
+<h2>Version 7- Css first addition</h2>
 <p>Bishopstown,<br> Cork <br> Munster</p>
 
 
