--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Welcome to MTU travel</h1>
-<h2>Version 7- Css first addition</h2>
+<h2>Version 7- Css second addition</h2>
 <p>Bishopstown,<br> Cork <br> Munster</p>
 
 
